<resources>
    <string name="app_name">Car Dealership</string>
    <string name="btn_save">Save</string>
    <string name="btn_search">Search</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Clear</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_add_car">Add a car</string>
    <string name="btn_buy_car">Buy</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_city">City</string>
    <string name="hint_number_plate">Number plate</string>
    <string name="hint_model">Model</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_color_car">Color</string>
    <string name="hint_price">Price</string>
    <string name="title_sales_act">Sales</string>
    <string name="empty_login_data">Enter your login details</string>
    <string name="invalid_login">User or password not valid</string>
    <string name="check_plate">Check a number plate</string>
    <string name="enter_color">Enter a color</string>
    <string name="info_saved">Info successfully saved</string>
    <string name="info_updated">Info successfully updated</string>
    <string name="update_failed">Info update failed</string>
    <string name="save_failed">Info save failed</string>
    <string name="full_datas">Enter the data required</string>
    <string name="plate_required">Number plate is required</string>
    <string name="info_deleted">Info successfully deleted</string>
    <string name="delete_failed">Info delete failed</string>
    <string name="car_no_found">Car not registered</string>
    <string name="sold">Sold car</string>
    <string name="plate_not_exists">Number plate not exists</string>
    <string name="user_required">Username required</string>
    <string name="user_no_found">User not registered</string>
</resources>