<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesActivity">

    <ImageView
        android:id="@+id/ivBuyCar"
        android:layout_width="80dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@drawable/ic_sale_car" />

    <EditText
        android:id="@+id/etBuyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="12"
        android:enabled="false"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBuyCar" />

    <EditText
        android:id="@+id/etBuyPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="11"
        android:hint="@string/hint_number_plate"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etBuyUser"
        app:layout_constraintTop_toBottomOf="@+id/etBuyUser" />

    <EditText
        android:id="@+id/etBuyModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="12"
        android:enabled="false"
        android:hint="@string/hint_model"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyPlate" />

    <EditText
        android:id="@+id/etBuyBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="12"
        android:enabled="false"
        android:hint="@string/hint_brand"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyModel" />

    <EditText
        android:id="@+id/etBuyColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="12"
        android:hint="@string/hint_color_car"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyBrand" />

    <EditText
        android:id="@+id/etBuyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="12"
        android:enabled="false"
        android:hint="@string/hint_price"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyColor" />

    <Button
        android:id="@+id/btnBuyCar"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:onClick="buyCar"
        android:text="@string/btn_buy_car"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuyCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyPrice"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnBuyCancel"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_rounded_outline"
        android:ems="7"
        android:onClick="cancelBuy"
        android:text="@string/btn_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuyCar" />

    <ImageView
        android:id="@+id/ivSearchCar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:onClick="searchCarBuy"
        app:layout_constraintBottom_toBottomOf="@+id/etBuyPlate"
        app:layout_constraintEnd_toEndOf="@+id/etBuyUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etBuyPlate"
        app:layout_constraintTop_toTopOf="@+id/etBuyPlate"
        app:srcCompat="@drawable/ic_search" />


</androidx.constraintlayout.widget.ConstraintLayout>